src/client/src/components/Navbar/Notification/styles.module.scss
.headerUserDropdown {
  .dropdownUserBtn {
    box-shadow: none;
    flex-direction: row;
    text-align: left;
    width: 100%;
    display: flex;
    align-items: center;
    border: 1px solid transparent;
    border-radius: 4px;
    padding: 2px 0;
    position: relative;
    min-height: 32px;
    margin-left: 8px;

    &:hover {
      background: #d3d3d3;
      cursor: pointer;
    }

    &focus {
      border-color: #edeff1;
      outline: none;
      cursor: pointer;
    }
  }
}

.dropDownNotification {
  padding: 0;
  background: none !important;

  .menu {
    padding: 16px 0px;
    border-bottom: 1px solid rgb(230, 230, 230);
    width: 100%;

    &:last-child {
      padding-bottom: 0;
    }

    a {
      text-decoration: none;
    }

    .item {
      padding: 8px 24px;
      //color: rgba(117, 117, 117, 1);
      color: #1b1b1b;
      line-height: 20px;
      font-size: 14px;
      font-family: sohne, 'Helvetica Neue', Helvetica, Arial, sans-serif;
      font-weight: 400;

      &:hover {
        color: #1b1b1b;
      }

      .name {
        p {
          word-break: break-all;
          -webkit-box-orient: vertical;
          text-overflow: ellipsis;
          font-size: 20px;
          margin-block-start: 0;
          margin-block-end: 0;
          font-weight: bold;
        }
      }

      ul {
        width: 100% !important;
        height: 250px !important;
        padding-left: 0%;
        overflow-y: scroll;
        overflow-x: hidden;

        &::-webkit-scrollbar {
          width: 4px;
        }

        &::-webkit-scrollbar-thumb {
          background-color: #e9ecef;
        }

        .contents {
          display: flex;
          max-height: 100px;
          align-items: center;
          width: 100%;

          &:hover {
            cursor: pointer;
            background-color: #d3d3d3;
          }

          div {
            position: relative !important;
            max-width: 80%;
            max-height: auto;
            padding: 15px;

            .notice {
              font-size: 16px;
              display: -webkit-box;
              -webkit-line-clamp: 2;
              -webkit-box-orient: vertical;
              overflow: hidden;
            }

            .time {
              margin-bottom: 20px;
              font-size: 16px;
              display: flex;
              align-items: flex-end;
            }
          }

          .ava_type {
            top: 20px;
            font-size: 25px;

            .types {
              position: relative;
              width: auto;
              left: 25px;
              bottom: 35px;
              //transform: translate(50%, 50%);
            }
          }
        }
      }

      .viewall {
        justify-content: center;
        display: flex;
        box-shadow: none;

        button {
          border: none;
          background: none;
          text-align: center;
          font-size: 15px;
          box-shadow: none;
          border: none;

          &:hover {
            cursor: pointer;
            text-decoration: underline;
          }
        }
      }
    }
  }
}

.dropDownUserMenuContent {
  justify-content: flex-start !important;
  flex-direction: column;
  height: auto !important;
  max-height: 573px !important;
  top: 45.5px !important;
  background-color: #fff !important;
  position: absolute !important;
  overflow-x: hidden !important;
  box-shadow: 0px 1px 4px rgb(230, 230, 230);
  border: 1px solid rgb(230, 230, 230);
  border-radius: 4px;
  border-top: 1px solid #edeff1;
  -ms-flex-pack: end;
  justify-content: flex-end !important;
  margin-top: 4px;
  padding-bottom: 8px !important;
  padding-top: 8px !important;
}

